# yotta_financial_sentiment

./: .gitignore  Makefile  README.md  download_model.sh  download_models.sh  pyproject.toml
data/app/: stock_sp500.csv  us_covid.csv
data/output/: predictions1.csv
data/prediction/: pred1.csv
data/training/: complete_dataset.csv  dataset_finsent.csv  reuters_2000.csv  training_data.csv
doc/: conf.py  index.rst
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
notebooks/: Fine-TuningRoBERTaforFSA.ipynb  Labeling.ipynb
src/: __init__.py
src/application/: predict.py  predict_string.py  scraping.py  train.py
src/domain/: app_utils.py  predict_utils.py  train.py  train_utils.py
src/infrastructure/: infra.py  make_dataset.py
src/interface/: app.py  map.py  st.py
src/settings/: base.py
