[tool.poetry]
name = "financial_sentiment"
version = "0.1.0"
description = "Sentiment analysis for financial news"
authors = ["Jerome Blin <blinjrm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
