[tool.poetry]
name = "financial_sentiment"
version = "0.1.0"
description = "Sentiment analysis for financial news"
authors = ["Jerome Blin <blinjrm@gmail.com>", "Damien Mellot <>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
transformers = "^4.0.0"
sklearn = "^0.0"
fire = "^0.3.1"
torch = "^1.7.0"
streamlit = "^0.72.0"
pydeck = "^0.5.0"
plotly-express = "^0.4.1"
beautifulsoup4 = "^4.9.3"
Sphinx = "^3.3.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
isort = "^5.6.4"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.black]
line_length = 100
